--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ICare
 
 spring.datasource.url=jdbc:sqlserver://172.16.0.150:1433;databaseName=Icare;trustServerCertificate=true
-spring.datasource.username=ali
-spring.datasource.password=P@ssw0rd@Tafteesh
+spring.datasource.username=icare
+spring.datasource.password=P@ssw0rd@Fssr
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
@@ -11,6 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.datasource.hikari.connection-test-query=SELECT 1
+spring.jpa.hibernate.ddl-auto=update
 
 
 
