--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ICare
 
 spring.datasource.url=jdbc:sqlserver://172.16.0.150:1433;databaseName=Icare;trustServerCertificate=true
 spring.datasource.username=icare
-spring.datasource.password=P@ssw0rd@Fssr
+spring.datasource.password=P@ssw0rd@Frrs
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
