--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:sqlserver://172.16.0.150:1433;databaseName=Icare;trus
 spring.datasource.username=icare
 spring.datasource.password=P@ssw0rd@Fssr
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
+server.address=0.0.0.0
 
 
